--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,8 @@ HOME PAGE
         </h1>
         <nav>
             <a href="/">HOME</a>
-            <a href="">FAV</a>
+            <a href="/selectData">FAV</a>
+            <a href="/rand">RAND</a>
         </nav>
     </header>
 
@@ -39,6 +40,7 @@ HOME PAGE
             </div>
             <%})%>
         </div>
+        
     </main>
 
     <footer>
