--- a/views/pages/rand.ejs
+++ b/views/pages/rand.ejs
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
-    <title>FAV</title>
+    <title>rAND</title>
 </head>
 
 <body>
     <header>
         <h1>
-FAV PAGE
+HOME PAGE
         </h1>
         <nav>
             <a href="/">HOME</a>
@@ -21,18 +21,26 @@ FAV PAGE
     </header>
 
     <main>
-        <%console.log(data)%>
-        <%console.log(data.type)%>
         <div class="all">
-            <%data.forEach(val=>{%>
+            <%data1.forEach(val=>{%>
             <div class="card">
                 <h2>Joke #</h2>
                 <h3><%=val.type%></h3>
                 <p><%=val.setup%></p>
                 <p><%=val.punchline%></p>
+
+                <div>
+                    <form action="/addToDb" method="GET">
+                        <input type="hidden" name="type" value="<%=val.type%>">
+                        <input type="hidden" name="setup" value="<%=val.setup%>">
+                        <input type="hidden" name="punchline" value="<%=val.punchline%>">
+                        <input type="submit" value="Add To DataBase">
+                    </form>
                 </div>
+            </div>
             <%})%>
         </div>
+        
     </main>
 
     <footer>
